feat(auth): Added  auto-login and logged-in ep.